# sanaap-backend-challenge-api

./: .gitignore  README.md  main.py  pyproject.toml
api/tests/v1/auth/: test_generate_token.py  test_refresh_token.py
api/tests/v1/documents/: test_create.py  test_destroy.py  test_permission.py  test_show.py  test_update.py
api/v1/: urls.py
api/v1/auth/: urls.py
api/v1/auth/views/: custom_token_obtain_pair_view.py  custom_token_refresh_view.py
api/v1/documents/: filters.py  permissions.py  urls.py
api/v1/documents/serializers/: document.py
api/v1/documents/services/documents/: create.py  update.py
api/v1/documents/validators/: document.py
api/v1/documents/views/: document_detail.py  list_create.py
archives/migrations/: 0001_initial.py
archives/models/: document.py
core/: settings.py  urls.py
core/services/: base.py  service_result.py
deployments/development/: .env.sample  Dockerfile  docker-compose.yml  entrypoint.sh  init-db.sh
deployments/development/nginx/: nginx.conf
